<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="48dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_name_label_text" />

        <EditText
            android:id="@+id/et_shoe_name"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/shoe_name_text"
            android:inputType="textPersonName"
            android:text="@{shoeViewModel.shoe.name}" />

        <TextView
            android:id="@+id/company_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/company_text" />

        <EditText
            android:id="@+id/et_company_name"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/company_hint"
            android:inputType="textPersonName"
            android:text="@{shoeViewModel.shoe.company}" />

        <TextView
            android:id="@+id/shoe_desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/shoe_desc_label" />

        <EditText
            android:id="@+id/et_shoe_description"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/shoe_description_hint"
            android:inputType="textPersonName"
            android:text="@{shoeViewModel.shoe.description}" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/shoe_size_label_text" />

        <!-- TODO: Not data bound yet having issues binding to Double-->
        <EditText
            android:id="@+id/et_shoe_size"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:text="@{shoeViewModel.shoe.size}"
            android:inputType="number" />

        <!-- ADD Shoe should be on the left-->
        <Button
            android:id="@+id/add_shoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_shoe_button_text" />

        <!-- Cancel should be on the right-->
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text" />

    </LinearLayout>
</layout>